sass/components/_buttons.scss
.btn {
    font-family: $text-font-family;
    font-size: 1.2rem;
    border-style: none;
    position: relative;
    @include shadow;
    @include hoverButton;
    &__action {
        border-radius: 50px;
        color: white;
        @include linearGradient($clr-primary, $clr-secondary);
        padding: 1.2rem 1.6rem 1.2rem 1.6rem;
        min-width: 50%;
        text-align: center;
    }
    &__explainer {
        border-radius: 20px;
        margin-top: 30px; 
        font-weight: 700;
        padding: 2rem 0px 2rem 0px;
        width: 95%;
        text-align: start;
        i {
            padding-right: 1.2rem;
            color: $darkgray;
            
        }
        &:hover{
            background-color: $clr-primary-light;
            i {
                color: $clr-primary;
                transition: all 0.3s ease-in-out;
            }    
        }
    }
    &__menu {
        border-radius: 10px;
        background-color: white;
        text-align: start;
        width: 100%; 
        margin-top: 15px;
        display: flex;
        justify-content: space-between;
        overflow: hidden;
        .info {
            padding: 15px;
            display: flex;
            flex-wrap: wrap;
            flex: 1 10 auto;
            width: 50%;
            h3 {
                font-size: 1.3rem;
                font-weight: 700;
                width: 100%;
                margin-bottom: 5px;
                @include textEllipsis;
                overflow: hidden;
            }
            p {
                font-size: 1.1rem;
                color: $darkgray;
                @include textEllipsis;
                flex: 0 2 auto;
                max-width: 75%;
            }
            .price__menu{
                font-weight: 700;
                font-size: 1.2rem;
                padding: 0px 0.5rem 0px 0px;
                text-align: end;
                flex: 1 1 auto;
            }    
        }
        &--checked{
            background-color: $clr-tertiary;
            align-self: stretch;
            width: 0px;
            display: flex;
            justify-content: center;
            align-items: center;
            color: white;
            transition: width 0.4s ease-in-out;    
            font-size: 1.3em;
        }
        &:hover &--checked{
            width: 5rem;
            i{
                animation: rotate 0.3s ease-in-out 0s 1 normal both;
            }
        }
    
    }
    
}

.btn-like {
    @include inlineButton;
    font-size: 1.8rem;
    width: 70px;
    position: relative;
    color: $lightblack;
    i {
        position: absolute;
        top: 5%;
        left: 25%;
    }
    .fas {
        transform: scale(0);
        color: $clr-secondary;
    }
    &:hover{
        cursor: pointer;
    }
    &:hover .fas{
        animation: growIn 0.4s ease-in-out 0s 1 normal both;
    }
    &:hover .far{
        animation: shrinkOut 0.4s ease-in-out 0s 1 normal both;
    }

}

@keyframes growIn{
    0%{
        transform: scale(0);
    }
    80%{
        transform: scale(1.2);
    }
    100%{
        transform: scale(1);
    }
}

@keyframes shrinkOut{
    from{
        transform: scale(1);
    }
    to{
        transform: scale(0);
        opacity: 0;
    }
}

@keyframes rotate{
    from{
        transform: rotate(-360deg);
    }
    to{
        transform: rotate(0deg);
    }
}

